pridejau siusti mygtuka

--- a/public_html/kontaktai.html
+++ b/public_html/kontaktai.html
@@ -15,7 +15,8 @@
             <form action="http://localhost/kursiustiduomenis.php" method="POST">
                 <input name="tema" type="text" id="fn" placeholder="Žinutės tema"> <br>
                 <textarea name="message" rows="4" cols="20" id="Žinutė">Žinutė
-        </textarea>
+        </textarea> <br>
+                <input value="Siųsti" type="submit"/>
 
 
 </main>
