--- a/public_html/Antra.html
+++ b/public_html/Antra.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+
 <head>
-Antra užduotis
-<meta charset ="UFT-8"/>
+<title> Antra užduotis </title>
+    <meta charset ="UFT-8"/>
+    <link rel="stylesheet" href="css/testas.css">
+    <link rel="stylesheet" href="css/dizainas.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <main>
 <h1>Pirma antraštė</h1>
