html formatavimo uzduotys

--- a/public_html/kontaktai.html
+++ b/public_html/kontaktai.html
@@ -16,7 +16,9 @@
                 <input name="tema" type="text" id="fn" placeholder="Žinutės tema"> <br>
                 <textarea name="message" rows="4" cols="20" id="Žinutė">Žinutė
         </textarea> <br>
-                <input value="Siųsti" type="submit"/>
+                <input value="submit" type="submit"/>
+
+
 
 
 </main>
