--- a/public_html/formatavimas.html
+++ b/public_html/formatavimas.html
@@ -3,9 +3,6 @@
 <head>
 <title> Antra užduotis </title>
     <meta charset ="UFT-8"/>
-    <link rel="stylesheet" href="css/testas.css">
-    <link rel="stylesheet" href="css/dizainas.css">
-    <link rel="stylesheet" href="css/layout.css">
 </head>
 <main>
 <h1>Pirma antraštė</h1>
@@ -13,7 +10,7 @@
 <p>Antras paragrafas</p>
 <p>Trečias paragrafas</p>
 <h2>Antra antraštė</h2>
-<p>Pirmas paragrafas</p>
+<p><b><em><ins>Pirmas</ins></em></b> paragrafas</p>
 <p>Antras paragrafas</p>
 </main>
 </html>
