--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,1 +1,31 @@
-Labas
+<!DOCTYPE html>
+<head>
+
+    <link rel="stylesheet" href="css/pastorinimas.css">
+</head>
+<body>
+<ul>
+    <li>
+        <ul>
+            <li><span>Item 1</span></li>
+            <li><span>Item 2</span></li>
+            <li><span>Item 3</span></li>
+        </ul>
+    </li>
+    <li>
+        <ul>
+            <li><span>Item 1</span></li>
+            <li><span>Item 2</span></li>
+            <li><span>Item 3</span></li>
+        </ul>
+    </li>
+    <li>
+        <ul>
+            <li><span>Item 1</span></li>
+            <li><span>Item 2</span></li>
+            <li><span>Item 3</span></li>
+        </ul>
+    </li>
+</ul>
+</body>
+</html>
