--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,21 +6,21 @@
 <body>
 <ul>
     <li>
-        <ul>
+        <ul class="first">
             <li><span>Item 1</span></li>
             <li><span>Item 2</span></li>
             <li><span>Item 3</span></li>
         </ul>
     </li>
     <li>
-        <ul>
+        <ul class="second">
             <li><span>Item 1</span></li>
             <li><span>Item 2</span></li>
             <li><span>Item 3</span></li>
         </ul>
     </li>
     <li>
-        <ul>
+        <ul class="third">
             <li><span>Item 1</span></li>
             <li><span>Item 2</span></li>
             <li><span>Item 3</span></li>
