--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -3,17 +3,16 @@
 <head>
     <title>Portfolio</title>
     <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/dizainas.css">
-    <link rel="stylesheet" href="/css/portfolio.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/layout.css">
-
-
+    <link rel="stylesheet" href="/css/portfolio.css">
 </head>
 <body>
 <div class="app">
     <header>
-        <img src="/logo.jpg" alt="LOGO" class="logo"/>
+        <img src="/img/logo.png" alt="LOGO" class="logo"/>
         <nav>
             <div class="burger">
                 <div></div>
@@ -24,8 +23,8 @@
             <a href="/portfolio.html">Portfolio</a>
             <a href="/kontaktai.html">Kontaktai</a>
             <a href="https://google.lt">Google</a>
-            <a href="https://facebook.com/kasniukai">Kąsniukai</a>
-            <a href="https://twitter.com">Twitter</a>
+            <a href="https://facebook.com">FB</a>
+            <a href="https://twiter.com">Twiter</a>
         </nav>
     </header>
 
@@ -67,5 +66,9 @@
         &copy;2022 Visos teises saugomos
     </footer>
 </div>
+
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/mano_skriptai.js"></script>
+<script src="js/jq_kodas.js"></script>
 </body>
 </html>
