--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
+<html lang="lt">
 <head>
-
-    <link rel="stylesheet" href="css/pastorinimas.css">
+  <title>Mano pirmasis puslapis</title>
+  <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="/css/layout.css">
+  <link rel="stylesheet" href="/css/dizainas.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<ul>
-    <li>
-        <ul class="first">
-            <li><span>Item 1</span></li>
-            <li><span>Item 2</span></li>
-            <li><span>Item 3</span></li>
-        </ul>
-    </li>
-    <li>
-        <ul class="second">
-            <li><span>Item 1</span></li>
-            <li><span>Item 2</span></li>
-            <li><span>Item 3</span></li>
-        </ul>
-    </li>
-    <li>
-        <ul class="third">
-            <li><span>Item 1</span></li>
-            <li><span>Item 2</span></li>
-            <li><span>Item 3</span></li>
-        </ul>
-    </li>
-</ul>
+<div class="app">
+  <header>
+    <img src="/img/logo.png" alt="LOGO" class="logo"/>
+    <nav>
+      <div class="burger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <a href="/">Pradzia</a>
+      <a href="/portfolio.html">Portfolio</a>
+      <a href="/kontaktai.html">Kontaktai</a>
+      <a href="https://google.lt">Google</a>
+      <a href="https://facebook.com">FB</a>
+      <a href="https://twiter.com">Twiter</a>
+    </nav>
+  </header>
+
+  <aside>
+    <span>REKLAMA</span>
+  </aside>
+
+  <main></main>
+
+  <footer>
+    &copy;2022 Visos teises saugomos
+  </footer>
+</div>
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/meniu.js"></script>
 </body>
 </html>
